2000-09-20  Joseph S. Myers  <jsm28@cam.ac.uk>

	* battlestar/getcom.c (getcom): die() on EOF; based on OpenBSD.
	* tests/battlestar.out15: New test.
	* tests/battlestar.test: Update.

	* battlestar/com6.c (open_score_file): If BATTLESTAR_QUIET is set
	in the environment, don't give a warning.
	* tests/battlestar.test: Set BATTLESTAR_QUIET so tests can be done
	as a user without write access to the log file.

	* battlestar/com5.c (kiss): From OpenBSD, "take" the bathing
	goddess if required; give a better message when trying to kiss a
	person who is not present.
	* tests/battlestar.in14, tests/battlestar.out14: New tests.
	* tests/battlestar.test: Update.

2000-09-17  Joseph S. Myers  <jsm28@cam.ac.uk>

	* battlestar/dayfile.c (dayfile), battlestar/nightfile.c
	(nightfile): Add missing initialisers and comments giving room
	numbers.

	* wtf/acronyms: Update from NetBSD CVS.

	* battlestar/com1.c, battlestar/com2.c, battlestar/com4.c,
	battlestar/com5.c, battlestar/com6.c, battlestar/com7.c,
	battlestar/getcom.c: Clean up formatting; partly from OpenBSD.

	* tests/battlestar.in9, tests/battlestar.out9,
	tests/battlestar.in10, tests/battlestar.out10,
	tests/battlestar.in11, tests/battlestar.out11,
	tests/battlestar.in12, tests/battlestar.out12,
	tests/battlestar.in13, tests/battlestar.out13: New tests.
	* tests/battlestar.test: Update.

	* battlestar/com6.c (dooropen): New function, from OpenBSD.
	* battlestar/cypher.c (cypher): Support new verbs OPEN, VERBOSE
	and BRIEF, from OpenBSD.
	* battlestar/extern.h: Add new verbs OPEN, VERBOSE and BRIEF, new
	variable verbose, and new function dooropen(), from OpenBSD.
	* battlestar/globals.c (verbose): New variable, from OpenBSD.
	* battlestar/room.c (writedes): If verbose, always give long
	description; from OpenBSD.
	* battlestar/words.c (wlist): Add synonyms "papaya" and "coconut"
	and verbs "open", "unlock", "verbose" and "brief", from OpenBSD.

2000-09-10  Joseph S. Myers  <jsm28@cam.ac.uk>
